@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Don't allow '[' in column names
+
 2014/12/17 0.46.0
 =================
 
